--- a/.github/workflows/shared-app-cd-workflow.yaml
+++ b/.github/workflows/shared-app-cd-workflow.yaml
@@ -53,9 +53,9 @@ jobs:
       AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_DEV_SUBSCRIPTION_ID }}
     with:
       environment: dev
-      SERVICE_PRINCIPAL_NAME: compute-aks-platform-teams-notification-api-dev-k8s-sa
-      RESOURCE_GROUP_NAME: devops-dev
-      LOG_ANALYTICS_WORKSPACE_ID: /subscriptions/39983c36-2aa4-4c7e-907a-6dbd95860295/resourceGroups/core-env-dev/providers/Microsoft.OperationalInsights/workspaces/core-env-dev-logs
+      SERVICE_PRINCIPAL_NAME: ${{ vars.PRINCIPAL_NAME_DEV }}
+      RESOURCE_GROUP_NAME: ${{ vars.RESOURCE_GROUP_DEV }}
+      LOG_ANALYTICS_WORKSPACE_ID: ${{ vars.WORKSPACE_ID_DEV }}
 
   app_deployment_dev:
     needs: [app_package, app_initialization_dev]
@@ -71,7 +71,7 @@ jobs:
       applicationVersion: ${{ needs.app_package.outputs.applicationVersion }}
       environment: dev
       singleCluster: ${{ inputs.singleCluster }}
-      SERVICE_PRINCIPAL_NAME: compute-aks-platform-teams-notification-api-dev-k8s-sa
+      SERVICE_PRINCIPAL_NAME: ${{ vars.PRINCIPAL_NAME_DEV }}
 
   app_integration_tests_dev:
     needs: app_deployment_dev
@@ -93,9 +93,9 @@ jobs:
       AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_DEV_SUBSCRIPTION_ID }}
     with:
       environment: test
-      SERVICE_PRINCIPAL_NAME: compute-aks-platform-teams-notification-api-test-k8s-sa
-      RESOURCE_GROUP_NAME: devops-test
-      LOG_ANALYTICS_WORKSPACE_ID: /subscriptions/39983c36-2aa4-4c7e-907a-6dbd95860295/resourceGroups/core-env-test/providers/Microsoft.OperationalInsights/workspaces/core-env-test-logs
+      SERVICE_PRINCIPAL_NAME: ${{ vars.PRINCIPAL_NAME_TEST }}
+      RESOURCE_GROUP_NAME: ${{ vars.RESOURCE_GROUP_TEST }}
+      LOG_ANALYTICS_WORKSPACE_ID: ${{ vars.WORKSPACE_ID_TEST }}
 
   app_deployment_test:
     needs: [app_package, app_integration_tests_dev, app_initialization_test]
@@ -111,7 +111,7 @@ jobs:
       applicationVersion: ${{ needs.app_package.outputs.applicationVersion }}
       environment: test
       singleCluster: ${{ inputs.singleCluster }}
-      SERVICE_PRINCIPAL_NAME: compute-aks-platform-teams-notification-api-test-k8s-sa
+      SERVICE_PRINCIPAL_NAME: ${{ vars.PRINCIPAL_NAME_TEST }}
 
   app_integration_tests_test:
     needs: app_deployment_test
@@ -134,9 +134,9 @@ jobs:
       AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_PROD_SUBSCRIPTION_ID }}
     with:
       environment: prod
-      SERVICE_PRINCIPAL_NAME: compute-aks-platform-teams-notification-api-prod-k8s-sa
-      RESOURCE_GROUP_NAME: devops-prod
-      LOG_ANALYTICS_WORKSPACE_ID: /subscriptions/961b7071-1490-44c4-97b7-b4620c73aee5/resourceGroups/core-env-prod/providers/Microsoft.OperationalInsights/workspaces/core-env-prod-logs
+      SERVICE_PRINCIPAL_NAME: ${{ vars.PRINCIPAL_NAME_PROD }}
+      RESOURCE_GROUP_NAME: ${{ vars.RESOURCE_GROUP_PROD }}
+      LOG_ANALYTICS_WORKSPACE_ID: ${{ vars.WORKSPACE_ID_PROD }}
 
   app_deployment_prod:
     needs: [app_package, app_integration_tests_test, app_initialization_prod]
@@ -152,7 +152,7 @@ jobs:
       applicationVersion: ${{ needs.app_package.outputs.applicationVersion }}
       environment: prod
       singleCluster: ${{ inputs.singleCluster }}
-      SERVICE_PRINCIPAL_NAME: compute-aks-platform-teams-notification-api-prod-k8s-sa
+      SERVICE_PRINCIPAL_NAME: ${{ vars.PRINCIPAL_NAME_PROD }}
 
   app_integration_tests_prod:
     needs: app_deployment_prod
