--- a/.github/workflows/shared-app-initialization-workflow.yaml
+++ b/.github/workflows/shared-app-initialization-workflow.yaml
@@ -12,17 +12,23 @@ on:
       AZURE_SUBSCRIPTION_ID:
         required: true
         description: "Azure Subscription ID"
-      ACTIONS_AUTH_APP_ID:
-        required: true
-        description: "GitHub App ID"
-      ACTIONS_AUTH_APP_PRIVATE_KEY:
-        required: true
-        description: "GitHub App Private Key"
     inputs:
       environment:
         type: string
         required: true
         description: "Environment"
+      SERVICE_PRINCIPAL_NAME:
+        type: string
+        required: true
+        description: "Service Principal Name"
+      RESOURCE_GROUP_NAME:
+        type: string
+        required: true
+        description: "Resource Group Name"
+      LOG_ANALYTICS_WORKSPACE_ID:
+        type: string
+        required: true
+        description: "Log Analytics Workspace ID"
 
 jobs:
   initialize_workload:
@@ -32,20 +38,6 @@ jobs:
     steps:
       - name: checkout repo
         uses: actions/checkout@v6
-
-      - name: gh-app-install token
-        id: gh-app
-        uses: getsentry/action-github-app-token@v3
-        with:
-          app_id: ${{ secrets.ACTIONS_AUTH_APP_ID }}
-          private_key: ${{ secrets.ACTIONS_AUTH_APP_PRIVATE_KEY }}
-
-      - name: checkout devops-azure repo
-        uses: actions/checkout@v6
-        with:
-          path: devops-azure
-          repository: Uniphar/devops-azure
-          token: ${{ steps.gh-app.outputs.token }}
 
       - name: azure login
         uses: azure/login@v2
@@ -59,11 +51,18 @@ jobs:
         uses: azure/powershell@v2
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }} #required for gh cli to determine "current PR"
+          SERVICE_PRINCIPAL_NAME: ${{ vars.SERVICE_PRINCIPAL_NAME }}
+          RESOURCE_GROUP_NAME: ${{ vars.RESOURCE_GROUP_NAME }}
+          LOG_ANALYTICS_WORKSPACE_ID: ${{ vars.LOG_ANALYTICS_WORKSPACE_ID }}
         with:
           inlineScript: |
-            Import-Module .\devops-azure\src\Uniphar.DevOps.psd1 -ErrorAction Stop -Force
-            . ./devops/Initialize-DevopsTeamsNotificationApiWorkload.ps1
-            Initialize-DevopsTeamsNotificationApiWorkload '${{ inputs.environment }}'
+            . ./devops/Initialize-PlatformTeamsNotificationApi.ps1
+            Initialize-PlatformTeamsNotificationApi `
+              -Environment '${{ inputs.environment }}' `
+              -SubscriptionId '${{ secrets.AZURE_SUBSCRIPTION_ID }}' `
+              -ServicePrincipalName '${{ inputs.SERVICE_PRINCIPAL_NAME }}' `
+              -ResourceGroupName '${{ inputs.RESOURCE_GROUP_NAME }}' `
+              -LogAnalyticsWorkspaceId '${{ inputs.LOG_ANALYTICS_WORKSPACE_ID }}'
           azPSVersion: "latest"
           errorActionPreference: "stop"
           failOnStandardError: true
