--- a/src/Teams.Notifications.Api/appsettings.local.json
+++ b/src/Teams.Notifications.Api/appsettings.local.json
@@ -1,8 +1,11 @@
 {
   "AZURE_ENTRA_EXTERNAL_TENANT_ID": "8763c4c7-b395-45c5-ac35-315b180777f5",
-  "devops-teams-notification-api-client-id": "703c0634-49fe-4627-ab3f-1ccbde6db02a",
-  "AZURE_CLIENT_ID": "c911e027-3cbc-4614-9f2e-872c20b8f4b2",
+  // same as dev
+  "platform-teams-notification-api-client-id": "e0d187ac-3366-464a-93b2-23bc33a847cd",
+  // same as the local debug
+  "AZURE_CLIENT_ID": "012bcd4f-5e63-4f76-b285-ed89887770c4",
   "AZURE_TENANT_ID": "8421dd92-337e-4405-8cfc-16118ffc5715",
   "AZURE_AUTHORITY_HOST": "https://login.microsoftonline.com",
+  // for local debug
   "ClientSecret": "CHANGE_ME"
 }
