--- a/src/Teams.Notifications.Api/appManifest/debug_bot/manifest.json
+++ b/src/Teams.Notifications.Api/appManifest/debug_bot/manifest.json
@@ -3,19 +3,34 @@
   "version": "1.0.0",
   "manifestVersion": "1.24",
   "id": "19ff5e33-4b4d-46b2-85bf-544516ec6e51",
-  "name": { "short": "Uniphar Debug Bot", "full": "Uniphar Debug Bot" },
+  "name": {
+    "short": "Uniphar Debug Bot",
+    "full": "Uniphar Debug Bot"
+  },
   "developer": {
     "name": "Uniphar",
     "websiteUrl": "https://www.uniphar.ie/",
     "privacyUrl": "https://www.uniphar.ie/static/privacy-statement/",
     "termsOfUseUrl": "https://www.uniphar.ie/static/terms-conditions"
   },
-  "description": { "short": "Uniphar Debug Bot", "full": "Uniphar Debug Bot" },
-  "icons": { "outline": "outline.png", "color": "color.png" },
+  "description": {
+    "short": "Uniphar Debug Bot",
+    "full": "Uniphar Debug Bot"
+  },
+  "icons": {
+    "outline": "outline.png",
+    "color": "color.png"
+  },
   "accentColor": "#FFFFFF",
   "staticTabs": [
-    { "entityId": "conversations", "scopes": ["personal"] },
-    { "entityId": "about", "scopes": ["personal"] }
+    {
+      "entityId": "conversations",
+      "scopes": ["personal"]
+    },
+    {
+      "entityId": "about",
+      "scopes": ["personal"]
+    }
   ],
   "bots": [
     {
@@ -41,20 +56,62 @@
   "authorization": {
     "permissions": {
       "resourceSpecific": [
-        { "name": "Channel.Create.Group", "type": "Application" },
-        { "name": "TeamsActivity.Send.Group", "type": "Application" },
-        { "name": "TeamMember.Read.Group", "type": "Application" },
-        { "name": "Member.Read.Group", "type": "Application" },
-        { "name": "Owner.Read.Group", "type": "Application" },
-        { "name": "ChannelSettings.ReadWrite.Group", "type": "Application" },
-        { "name": "ChannelMessage.Read.Group", "type": "Application" },
-        { "name": "ChannelMessage.Send.Group", "type": "Application" },
-        { "name": "ChannelSettings.Read.Group", "type": "Application" },
-        { "name": "Channel.Delete.Group", "type": "Application" },
-        { "name": "TeamsActivity.Send.User", "type": "Application" },
-        { "name": "Chat.Manage.Chat", "type": "Application" },
-        { "name": "ChatMessage.Send.Chat", "type": "Application" },
-        { "name": "ChatMessage.Read.Chat", "type": "Application" }
+        {
+          "name": "Channel.Create.Group",
+          "type": "Application"
+        },
+        {
+          "name": "TeamsActivity.Send.Group",
+          "type": "Application"
+        },
+        {
+          "name": "TeamMember.Read.Group",
+          "type": "Application"
+        },
+        {
+          "name": "Member.Read.Group",
+          "type": "Application"
+        },
+        {
+          "name": "Owner.Read.Group",
+          "type": "Application"
+        },
+        {
+          "name": "ChannelSettings.ReadWrite.Group",
+          "type": "Application"
+        },
+        {
+          "name": "ChannelMessage.Read.Group",
+          "type": "Application"
+        },
+        {
+          "name": "ChannelMessage.Send.Group",
+          "type": "Application"
+        },
+        {
+          "name": "ChannelSettings.Read.Group",
+          "type": "Application"
+        },
+        {
+          "name": "Channel.Delete.Group",
+          "type": "Application"
+        },
+        {
+          "name": "TeamsActivity.Send.User",
+          "type": "Application"
+        },
+        {
+          "name": "Chat.Manage.Chat",
+          "type": "Application"
+        },
+        {
+          "name": "ChatMessage.Send.Chat",
+          "type": "Application"
+        },
+        {
+          "name": "ChatMessage.Read.Chat",
+          "type": "Application"
+        }
       ]
     }
   },
