--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -49,7 +49,7 @@ updates:
 
   # Docker base images
   - package-ecosystem: "docker"
-    directory: "/src/Teams.Notifications.Api/"
+    directory: "/src/Teams.Notifications.Api"
     schedule:
       interval: "weekly"
       day: "monday"
